// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildImports imports when typescript 1`] = `
"import { Browser, Page } from \\"playwright\\";
import qawolf from \\"qawolf\\";"
`;

exports[`buildImports imports when typescript 2`] = `
"import { Browser, Page, devices } from \\"playwright\\";
import qawolf from \\"qawolf\\";
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports includes device when specified 1`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports requires when not typescript 1`] = `"const qawolf = require(\\"qawolf\\");"`;

exports[`buildTemplate builds test template 1`] = `
"const qawolf = require(\\"qawolf\\");

test(\\"myName\\", async () => {
  const browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  const page = await context.newPage();

  await page.goto(\\"www.qawolf.com\\", { waitUntil: \\"domcontentloaded\\" });
  await qawolf.create();
  
  await qawolf.stopVideos();
  await browser.close();
});"
`;

exports[`buildTemplate builds test template: device 1`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPhone 11\\"];

test(\\"myName\\", async () => {
  const browser = await qawolf.launch();
  const context = await browser.newContext({ ...device });
  await qawolf.register(context);
  const page = await context.newPage();

  await page.goto(\\"www.qawolf.com\\", { waitUntil: \\"domcontentloaded\\" });
  await qawolf.create();
  
  await qawolf.stopVideos();
  await browser.close();
});"
`;

exports[`buildTemplate builds test template: device typescript 1`] = `
"import { Browser, Page, devices } from \\"playwright\\";
import qawolf from \\"qawolf\\";
const device = devices[\\"iPhone 7\\"];

test(\\"myName\\", async () => {
  const browser = await qawolf.launch();
  const context = await browser.newContext({ ...device });
  await qawolf.register(context);
  const page = await context.newPage();

  await page.goto(\\"www.qawolf.com\\", { waitUntil: \\"domcontentloaded\\" });
  await qawolf.create();
  
  await qawolf.stopVideos();
  await browser.close();
});"
`;

exports[`buildTemplate builds test template: state 1`] = `
"const qawolf = require(\\"qawolf\\");

test(\\"myName\\", async () => {
  const browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  const page = await context.newPage();

  await page.goto(\\"www.qawolf.com\\", { waitUntil: \\"domcontentloaded\\" });
  await qawolf.setState(page, \\"admin.json\\");
  await qawolf.create();
  
  await qawolf.stopVideos();
  await browser.close();
});"
`;

exports[`buildTemplate builds test template: typescript 1`] = `
"import { Browser, Page } from \\"playwright\\";
import qawolf from \\"qawolf\\";

test(\\"myName\\", async () => {
  const browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  const page = await context.newPage();

  await page.goto(\\"www.qawolf.com\\", { waitUntil: \\"domcontentloaded\\" });
  await qawolf.create();
  
  await qawolf.stopVideos();
  await browser.close();
});"
`;
